src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/not_array_raa.php
<?php

return [
    'expectedError' => 'Property "raa" must have an object as value',
    'expectedPropertyPath' => 'raa',
    'configuration' => [
        'gateway' => [],
        'raa' => null,
        'sraa' => [],
        'email_templates' => [],
    ]
];
